# v2neko

./: flake.nix  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  depositor.rs  error.rs  files.rs  main.rs  proxy.rs  ws.rs
src-tauri/src/v2ray/: core.rs  generate.rs  mod.rs
src-tauri/src/vmess/: core.rs  error.rs  generate.rs  mod.rs
src/assets/style/: main.scss
src/components/: appbar.vue  content.vue
src/components/content/: home.vue
